--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link href="../stylesheets/crypto.css" rel="stylesheet"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>CTDigital</title>
 <style>
 
@@ -130,13 +130,25 @@
 <footer>
 
     <nav class="navbar navbar-expand styletest navbar-dark">
-        <div class="navbar-nav nav w-100 d-flex justify-content-end">
-            <a class="nav-item nav-link" href="#">Resume</a>
-            <a class="nav-item nav-link" href="#">Portfolio</a>
-            <a class="nav-item nav-link" href="#">Github</a>
-            <a class="nav-item nav-link" href="#">LinkedIn</a>
+        <div class="navbar-nav nav w-100 d-flex justify-content-end" style="margin: 0 70px 0 0;">
+            <a class="nav-item nav-link" href="#"><i class="fa fa-facebook fa-2x"></i></a>
+            <a class="nav-item nav-link" href="#"><i class="fa fa-twitter fa-2x"></i></a>
+            <a class="nav-item nav-link" href="#"><i class="fa fa-youtube fa-2x"></i></a>
+            <a class="nav-item nav-link" href="#"><i class="fa fa-linkedin fa-2x"></i></a>
         </div>
     </nav>
+
+    <div class="row">
+        <div class="col-11 hide-md mx-auto text-light">
+            <hr>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-2 mx-auto" style="color:rgb(184, 186, 194)">
+            <p style="font-size: 12px">Copyright <span><i class="fa fa-copyright"></i></span> 2022 by CTDigital</p>
+        </div>
+    </div>
+
 </footer>
 
 
