--- a/about.html
+++ b/about.html
@@ -26,38 +26,31 @@
         box-shadow: 0 2px 4px 0 rgba(0,0,0,.1);
     }
 
+
     .tab {
+        background-color:  white;
         overflow: hidden;
         border: 1px solid #ccc;
-        background-color: #f1f1f1;
+        justify-content: center;
     }
 
-    /* Style the buttons that are used to open the tab content */
-    .tab button {
-        background-color: inherit;
+    .tablinks {
+        background-color: white;
         border: none;
-        outline: none;
+        text-align: center;
+        display: inline-block;
         padding: 14px 16px;
-        transition: 0.3s;
+        outline: none;
+        transition: .4s;
     }
 
-    /* Change background color of buttons on hover */
-    .tab button:hover {
-        background-color: #ddd;
+    .tablinks:hover {
+        background-color: rgb(150, 151, 156);
     }
 
-    /* Create an active/current tablink class */
-    .tab button.active {
+    .tab button:active {
         background-color: #ccc;
     }
-
-    /* Style the tab content */
-    .tabcontent {
-        display: none;
-        border: 1px solid #ccc;
-        border-top: none;
-    }
-
 
     .pos {
         position: absolute;
@@ -68,15 +61,12 @@
 </style>
 </head> 
 
-<!-- Fix image, make form up top -->
-
-
 <header>
 
         <nav class="navbar navbar-expand navbar-dark styletest fixed-top shadow">
             <div class="navbar-nav nav w-100 d-flex justify-content-around">
-                <a class="nav-item nav-link active" href="#">Home</a>
-                <a class="nav-item nav-link" href="about.html">About</a>
+                <a class="nav-item nav-link" href="index.html">Home</a>
+                <a class="nav-item nav-link active" href="#">About</a>
                 <a class="nav-item nav-link" href="#">Contact Us</a>
                 <a class="nav-item nav-link" href="#">Pricing</a>
             </div>
@@ -85,12 +75,45 @@
 </header>
 
 <body class="styletest">
-    <div style="overflow: hidden;">  
+    <div style="height:50px;"></div>
+    <!-- <div style="overflow: hidden;">  
         <img src="./images/office-4959782.jpg" width="100%" height="auto px"/>
         <p style="font-size: 5.2rem; color: black; z-index: 1;" class="pos">CT Digital</p>
-    </div>
-
-    <div class="contiainer-fluid w-100 styletest mt-5" style="overflow: hidden;"> 
+    </div> -->
+    <!-- <div class="container-fluid w-100" style="overflow:hidden; border-width: 10px 0 0 0; border-style: solid; border-color: maroon;"> -->
+    <div class="contiainer-fluid w-100 styletest mt-5" style="overflow: hidden;">
+        <div class="row text-light">
+            <div class="col-9 col-md-6" style="padding: 0 0 0 100px;">
+                <h1 style="font-family: 'Courier New', Courier, monospace;" >Who Are We?</h1>
+                <p style="color:rgb(216, 221, 213); font-family: 'Courier New', Courier, monospace">&emsp;&emsp;CTDigital is a marketing and advertising firm with the key interest in providing both a service to those who are in search,
+                    as well as to those who are searching. Whether a local business looking to attract new customers, real estate agencies wanting
+                    to sell more properties, individuals on the look for new places to meet their adventurous side, or someone looking to buy a house
+                    or rent an apartment, CTDigital meets anyone and everyone's needs.
+                </p>
+            </div>
+        </div>
+        <div class="row text-light justify-content-end">
+            <div class="col-9 col-md-6" style="padding: 0 100px 0 0;">
+                <h1 style="font-family:'Courier New', Courier, monospace">Clients</h1>
+                <p style="color:rgb(216, 221, 213); font-family: 'Courier New', Courier, monospace">
+                    &emsp;&emsp;Clients arange from anything as small as your local pizzaria, coffee shop, or mechanic to as large as real estate
+                    brokers looking to advertise their area. We make sure that our clients will have ample access to our audience through 
+                    automated email service provided by us.
+                </p>
+            </div>
+        </div>
+        <div class="row text-light">
+            <div class="col-9 col-md-6" style="padding: 0 0 0 100px;">
+                <h1 style="font-family: 'Courier New', Courier, monospace;">Audience</h1>
+                <p style="color:rgb(216, 221, 213); font-family: 'Courier New', Courier, monospace">
+                    &emsp;&emsp;Our audience is no different from anyone we desire to help. Our help all policy guarantees we will help
+                    assist in always providing you with the information you desire. New places to explore around town? The information
+                    is no more than a click away. Looking to move into a new apartment or house at the best prices? We will get you 
+                    in contact with just the right people. We guarantee our audience that we will only send our service with your consent, 
+                    no questions asked.
+                </p>
+            </div>
+        </div>
         <div class="row text-light">
             <div class="col-sm-3 hide-md mx-auto">
                 <hr>
@@ -105,34 +128,15 @@
 
         <div class="row">
             <div class="col-6 mx-auto">
-            <div class="tab">
-                <button class="tablinks" onclick="showInfo(event, 'client')">Client</button>
-                <button class="tablinks" onclick="showInfo(event, 'audience')">Audience</button>
+                <div class="tab">
+                    <button class="tablinks" onclick="newEvent(showInfo, 'client')">Client</button>
+                    <button class="tablinks" onclick="newEvent(showInfo, 'audience')">Audience</button>
+                </div>
+                <div class="tabcontent">
             </div>
         </div>
-        <div class="row">
-            <div class="tabcontent col-6 mx-auto" id="client">
-                <form>
-                    <label for="clientname">Name</label><br>
-                    <input type="text" id="clientname" name="clientname"/><br>
-                    <label for="clientemail">Email </label><br>
-                    <input type="email" id="clientemail"/><br>
 
-                    <button type="submit" class="btn btn-success">Submit</button>
-                </form>
-            </div>
 
-            <div class="tabcontent col-6 mx-auto" id="audience">
-                <form method="post" action="audienceclietform" id="newsletter">
-                    <label for="audiencename">Name</label><br>
-                    <input type="text" id="audiencename" name="audiencename"/><br>
-                    <label for="audienceemail">Email </label><br>
-                    <input type="email" id="audienceemail"/><br>
-                    <button type="submit" class="btn btn-success">Submit</button>
-
-                </form>
-            </div>
-        </div>
 
     </div>
     <div style="height: 100px">
@@ -165,7 +169,7 @@
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="./scripts/audienceclientform.js"></script>
+<script src="../scripts/crytpoinformation.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </html>
